--- a/frontend/src/home/components/AllCard.css
+++ b/frontend/src/home/components/AllCard.css
@@ -1,16 +1,3 @@
-.home-page {
-  max-width: 1050px; /* 최대 너비 설정 */
-  margin: 0 auto; /* 가로 중앙 정렬 */
-  padding: 20px;
-}
-
-.section-title {
-  font-size: 1.5em;
-  font-weight: bold;
-  margin-bottom: 20px;
-  text-align: left;
-}
-
 /* 카드 컨테이너: 가로 정렬 */
 .card-container {
   display: flex;
@@ -29,13 +16,13 @@
 }
 
 /* 카드 헤더 스타일 */
-.card-header {
+.card-header-all {
   position: absolute; /* 이미지 위에 겹치도록 설정 */
   top: 10px; /* 이미지의 위쪽에 배치 */
   left: 10px;
   width: 270px; /* 좌우 여백을 제외한 전체 너비 */
   display: flex;
-  justify-content: space-between;
+  justify-content: right;
   z-index: 1; /* 이미지보다 위에 표시되도록 설정 */ /* 배경색을 반투명하게 설정 (선택 사항) */
   padding: 5px; /* 내부 여백 */
   border-radius: 8px; /* 카드와 일관된 모서리 둥글기 */
@@ -79,7 +66,7 @@
 
 .card-price {
   font-size: 1.2em;
-  color: #2a74b7;
+  color: #007bff;
   margin: 10px;
 }
 
