--- a/frontend/src/home/components/Header.css
+++ b/frontend/src/home/components/Header.css
@@ -1,54 +1,116 @@
 .header {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
-  padding: 20px;
-  background-color: #f8f9fa;
+  background-color: #e8f0ff;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 0px;
+  /* padding: 20px 20px; */
+  border-bottom: 1px solid #d1d1d1;
+  justify-content: space-between;
 }
 
-.nav {
+/* Header 상단 영역 */
+.header-top {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  max-width: 1200px;
+  margin-bottom: 20px;
+}
+
+.header-right {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
   gap: 20px;
 }
 
-.nav-link {
-  color: #555;
-  text-decoration: none;
-  font-size: 1.1em;
-}
-
-.nav-link:hover {
-  color: #007bff;
-}
-
-.search-section {
+.profile {
   display: flex;
   align-items: center;
-  gap: 5px;
-  flex-grow: 1px;
-  width: 600px;
-  margin: 0 20px;
+  gap: 10px;
+}
+
+.user-name {
+  font-size: 18px;
+  color: #2a74b7;
+}
+
+.mypage-link {
+  color: #2a74b7;
+  gap: 20px;
+  font-size: 18px;
+  text-decoration: none;
+  /* padding: 5px 15px; */
+  /* //border-bottom: 2px solid transparent; */
+}
+
+.mypage-link:hover {
+  color: #7ba719;
+}
+
+.nav {
+  margin-top: 20px;
+  justify-content: space-between;
+  display: flex;
+  gap: 10px;
+}
+
+.nav-menu {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 80%;
+  gap: 80px; /* 네비게이션 링크 사이 여백 */
+  padding: 10px 0;
+  background-color: #e8f0ff;
+}
+
+.nav-link {
+  color: #2a74b7;
+  gap: 20px;
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: none;
+  /* padding: 5px 15px; */
+  /* //border-bottom: 2px solid transparent; */
+}
+
+.nav-link:hover,
+.nav-link.active:hover {
+  color: #7ba719;
+}
+
+.nav-link.active {
+  color: #7ba719; /* 현재 경로가 일치할 때 빨간색으로 표시 */
+  font-weight: 900;
+}
+
+.search-bar {
+  display: flex;
+  align-items: center;
+  border: 1px solid #99c2ff;
+  border-radius: 20px;
+  width: 60%;
+  padding: 5px 10px;
+  background-color: white;
+  position: relative;
 }
 
 .search-input {
+  display: inline;
   padding: 5px 10px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  font-size: 1em;
-}
-
-.search-button {
-  padding: 5px 10px;
-  background-color: #007bff;
-  color: #fff;
   border: none;
   border-radius: 5px;
-  cursor: pointer;
-  font-size: 1em;
-}
-
-.search-button:hover {
-  background-color: #0056b3;
+  font-size: 16px;
+  width: 80%;
+  height: 35px;
+  flex-shrink: 0;
+  position: relative;
 }
 
 .user-section {
@@ -59,4 +121,9 @@
 .icon {
   cursor: pointer;
   color: #007bff;
+}
+
+.logo {
+  width: 110px;
+  height: auto;
 }
