--- a/frontend/src/home/Home.css
+++ b/frontend/src/home/Home.css
@@ -16,6 +16,8 @@
   display: flex;
   gap: 20px;
   flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 35px;
 }
 
 /* 개별 카드 스타일 */
@@ -42,17 +44,31 @@
 }
 
 .rank-badge {
-  background-color: #f4a261;
-  color: white;
   font-weight: bold;
   padding: 10px 15px;
   border-radius: 50%;
   font-size: 17px;
+  text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.3);
+}
+
+.rank-1 {
+  background-color: #ffe251;
+  color: #ff9d00;
+}
+
+.rank-2 {
+  background-color: white;
+  color: #878787;
+}
+
+.rank-3 {
+  background-color: #edc568;
+  color: #a86800;
 }
 
 .d-day-badge {
-  background-color: #007bff;
-  color: white;
+  background-color: #fce7e7;
+  color: #f71a1a;
   padding: 10px 15px;
   border-radius: 5px;
   font-size: 17px;
@@ -72,7 +88,7 @@
 }
 
 .card-title {
-  font-size: 1em;
+  font-size: 70px;
   font-weight: bold;
   margin: 7px;
 }
@@ -85,6 +101,6 @@
 
 .card-location {
   font-size: 0.9em;
-  color: #6c757d;
+  color: #7ba719;
   margin: 5px;
 }
