--- a/frontend/src/home/Home.css
+++ b/frontend/src/home/Home.css
@@ -20,6 +20,14 @@
   margin-bottom: 35px;
 }
 
+.alarm-container {
+  width: 1000px;
+  border: 1px solid #ddd; /* 연한 테두리 추가 */
+  text-align: left;
+  padding: 10px;
+  overflow: hidden;
+}
+
 /* 개별 카드 스타일 */
 .custom-card {
   position: relative; /* 자식 요소인 .card-header를 이미지 위에 배치할 수 있도록 설정 */
