--- a/frontend/src/mypage/UserInfo.css
+++ b/frontend/src/mypage/UserInfo.css
@@ -1,19 +1,53 @@
 /* userinfo.css */
 
 .card {
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .form-label {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .form-control {
-    max-width: 200px;
+  max-width: 200px;
 }
 
 .btn-primary {
-    background-color: #2A74B7;
-    border-color: #2A74B7;
+  background-color: #2a74b7;
+  border-color: #2a74b7;
+}
+
+/* 전체 컨테이너 */
+.d-flex {
+  display: flex;
+  align-items: start;
+}
+/* 아이콘 툴팁 스타일 */
+.tooltip-container {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.tooltip-text {
+  visibility: hidden;
+  width: 180px;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  border-radius: 4px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip-container:hover .tooltip-text {
+  visibility: visible;
+  opacity: 1;
 }
